changes on the caging calendar

--- a/src/app/Returns/Subviews/phase-gross/phase-gross.component.scss
+++ b/src/app/Returns/Subviews/phase-gross/phase-gross.component.scss
@@ -68,6 +68,19 @@
   padding: 0 !important;
 }
 
+.mailLevelColumn{
+  width:120px !important;
+  min-width: 120px !important; //FF and IE
+  max-width: 120px !important;
+  overflow: visible; //so that it does not expand td
+  white-space: nowrap; //so that it does not wrap the text
+  &.mailcodeCell{ // so word wrap is applied specifically to the mail code cell (which is bound by a much tighter space)
+      word-break: break-all !important;
+      white-space: normal;
+      padding-right: 4px;
+  }
+}
+
 
 .totalColumn{
     font-weight: bold;
