--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -8,7 +8,13 @@
     display: none;
   }
 
-
+  .expBtnColumn{
+    width: 55px;
+    min-width: 55px;
+    padding: 0 !important;
+    border-bottom:none !important;
+    border-top:none !important;
+  }
 
 
 .totalsBox{
@@ -99,9 +105,9 @@
     border-radius: 0 !important;
 }
 
-::ng-deep #dayBtn{
-    border-bottom-left-radius: 0 !important;
-    border-top-left-radius: 0 !important;
+//Changes the datepicker styling on the day view portion of the calendar
+::ng-deep .mat-form-field-infix{
+    width: 0 !important;
 }
 
 .btnRow{
@@ -250,7 +256,7 @@
 
 /////////// STYLING FOR TABLE ////////
 #table2{
-    width: 96%;
+    width: 100%;
     margin: 0 auto;
     th{
         font-size: 12px !important;
@@ -287,6 +293,19 @@
             border-top: 1px solid $color-gainsboro;
             
           }
+    }
+  }
+
+  .mailLevelColumn{
+    width:120px !important;
+    min-width: 120px !important; //FF and IE
+    max-width: 120px !important;
+    overflow: visible; //so that it does not expand td
+    white-space: nowrap; //so that it does not wrap the text
+    &.mailcodeCell{ // so word wrap is applied specifically to the mail code cell (which is bound by a much tighter space)
+        word-break: break-all !important;
+        white-space: normal;
+        padding-right: 4px;
     }
   }
   
