--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -354,7 +354,11 @@ tr.mat-header-row{
     display: inline;
   }
 
-
+  .mat-row.childRow {
+    &:hover{
+        background: $color-blue-highlight;
+    }
+  }
 
 
 
