--- a/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
+++ b/src/app/Utilities_Pages/Caging/caging-calendar/caging-calendar.component.scss
@@ -1,56 +1,7 @@
 @import '~src/appTheme.scss'; 
 
-.example-month-picker .mat-calendar-period-button {
-    pointer-events: none;
-  }
-  
-  .example-month-picker .mat-calendar-arrow {
-    display: none;
-  }
 
-  .expBtnColumn{
-    width: 55px;
-    min-width: 55px;
-    height: 40px !important;
-    padding: 0 !important;
-    border-bottom:none !important;
-    border-top:none !important;
-  }
-
-  .controlColumn{
-    width:70px;
-    min-width:70px;
-    border-bottom:none !important;
-    border-top:none !important;  
-  }
-
-  //Controls material expand/collapse buttons at all levels
-.controlCollBtn{
-    width:20px;
-    height:20px;
-    margin-right: 8px;
-    &:hover{
-      color: $color-blue-dark;
-    }
-    i{
-      padding: 0px 0px 10px 0px;
-    }
-  }
-
-.elementInput{
-    width:75%;
-    display:flex;
-    margin: 0 auto;
-    background-color: $color-gallery;
-    input{
-        text-align:center;
-    }
-    span{
-        padding-bottom:2px;
-    }
-}
-
-
+//////////////////// SETTINGS FOR ENTIRE PAGE OR ACROSS TIME VIEWS ////////////////
 .totalsBox{
     p{
         font-weight: bold;
@@ -80,7 +31,6 @@
     &#timeResetBtn{
         margin-left: 20px;
     }
-
 }
 
 #timeHeader{
@@ -107,8 +57,6 @@
         font-weight: 500;
     }
 }
-//////////////////////////////////
-
 
 //Controls styling for left and right time travel buttons
 ::ng-deep #leftTravelBtn{
@@ -127,49 +75,88 @@
     width: 35px !important;
     min-width: 35px;
 }
-//////////////////////////////////////////
+
+//Styling for that contains all of the button controls of calendar
+.calendarToolsRow{
+    margin-bottom: 2px;
+}
+
+//Settings for calendar header row (say month# or day of the week)
+.headerBox{
+    border-radius: 4px 4px 0px 0px;
+    border-bottom: none;
+    div{
+        font-weight: bold;
+        text-align: center;
+        background-color: $color-gainsboro;
+    }
+}
+
+.calendarContainer{
+    border-radius: 4px;
+}
+
+.groupElementSelected{
+    background-color: rgba(18,121,192, 0.5);
+}
+
+.groupElementDefault{
+    background-color: $color-gallery;
+}
+
+.elementSelected{
+    background-color: rgba(18,121,192, 0.25);
+}
+
+.elementDefault{
+    background-color: $color-white;
+}
+
+.elementEmpty{
+    background-color: $color-white;
+    div.row.selectableHeader{
+        opacity: 0.75;
+    }
+    div.row.elemValue{
+        opacity: 0.25;
+    }
+}
+
+//Settings for styling if the element only has zero values
+.selectable {
+    cursor: pointer !important;
+    .selectableHeader{
+        color: $color-blue-dark;
+    }
+}
+.unselectable {
+    cursor: text !important;
+}
+
+//Settings for the "hyperlink" that allows you to travel to the other views via gross
+.grossTravel{
+    color: $color-blue-dark;
+    &:hover{
+        text-decoration: underline;
+        text-decoration-color: $color-blue-dark;
+    }
+}
 
 
+
+///////////////////// SETTINGS FOR YEAR VIEW //////////////////
 ::ng-deep #yearBtn{
     border-bottom-right-radius: 0 !important;
     border-top-right-radius: 0 !important;
 }
 
-::ng-deep #monthBtn{
-    border-radius: 0 !important;
-}
-
-//Changes the datepicker styling on the day view portion of the calendar
-::ng-deep .mat-form-field-infix{
-    width: 0 !important;
-}
-
-.btnRow{
-    margin-bottom: 2px;
-}
-
+//Controls styling found in both the month and quarter boxes on the year calendar
 .boxOnYearCal{
     border: 1px solid $color-silver;
     padding-top: 10px;
     padding-bottom: 15px;
     &:hover{
         cursor: pointer;
-    }
-}
-
-.dayBox{
-    .col-12{
-        text-align: right;
-        font-weight: bold;
-        padding-bottom: 14px;
-    }
-}
-
-.weekBox{
-    .col-12{
-        text-align: center;
-        font-weight: bold;
-        padding-bottom: 14px;
     }
 }
 
@@ -189,56 +176,38 @@
     }
 }
 
-.headerBox{
-    // border: 1px solid $color-silver;
-    border-radius: 4px 4px 0px 0px;
-    border-bottom: none;
-    div{
-        font-weight: bold;
-        text-align: center;
-        background-color: $color-gainsboro;
-    }
-}
-
-.calendarBox{
+.yvCalendarBox{
     border: 1px solid $color-gainsboro;
     border-radius: 0px 0px 4px 4px;
 }
 
-.calendarContainer{
-    border-radius: 4px;
+
+
+
+/////////////////////////// SETTINGS FOR MONTH VIEW //////////////////////
+::ng-deep #monthBtn{
+    border-radius: 0 !important;
 }
 
-.groupElementSelected{
-    // background-color: rgba(92,184,92, 0.4);
-    background-color: rgba(18,121,192, 0.5);
-}
-
-.groupElementDefault{
-    background-color: $color-gallery;
-}
-
-.elementSelected{
-    // background-color: rgba(92,184,92, 0.3);
-    background-color: rgba(18,121,192, 0.25);
-}
-
-.elementDefault{
-    background-color: $color-white;
-}
-
-.elementEmpty{
-    // background-color: rgba(255,193,7, 0.2);
-    background-color: $color-white;
-    div.row.selectableHeader{
-        opacity: 0.75;
-    }
-    div.row.elemValue{
-        opacity: 0.25;
+//Controls styling of the day boxes on the month calendar
+.dayBox{
+    .col-12{
+        text-align: right;
+        font-weight: bold;
+        padding-bottom: 14px;
     }
 }
 
+//Controls styling of the week box on the month calendar
+.weekBox{
+    .col-12{
+        text-align: center;
+        font-weight: bold;
+        padding-bottom: 14px;
+    }
+}
 
+//Controls styling found on both week and day boxes on the month calendar
 .boxOnMonthCal{
     border: 1px solid $color-silver;
     padding-top: 8px;
@@ -254,36 +223,34 @@
     }
 }
 
+//Settings for if a day is inactive (i.e. there are no days that week found in the current month)
 .inactive{
-    // background-color: rgba(255,223,199,0.9);    
-    // opacity: 0.60;
     background-color: $color-whitesmoke;
     div{
         opacity: 0.5;
     }
 }
 
+//Is applied if the entire row is inactive (only found on row 6 of the month calendar, where it could have 7 days that are all the next month)
 .inactiveRow{
     display: none !important;
 }
 
-.selectable {
-    cursor: pointer !important;
-    .selectableHeader{
-        color: $color-blue-dark;
-    }
+
+
+
+/////////////////// SETTINGS FOR DAY VIEW (TABLE HAS ITS OWN SECTION BELOW) //////////////
+//Changes the datepicker styling on the day view portion of the calendar
+::ng-deep .mat-form-field-infix{
+    width: 0 !important;
 }
 
-.unselectable {
-    cursor: text !important;
-}
-
-.grossTravel{
-    color: $color-blue-dark;
-    &:hover{
-        text-decoration: underline;
-        text-decoration-color: $color-blue-dark;
-    }
+//Controls settings on day view date picker
+.example-month-picker .mat-calendar-period-button {
+    pointer-events: none;
+} 
+.example-month-picker .mat-calendar-arrow {
+    display: none;
 }
 
 .stickyButtons{
@@ -291,118 +258,13 @@
     position: sticky !important;
     top: 100px !important;
     z-index: 120;
-  }
-
-
-
-/////////// STYLING FOR TABLE ////////
-#table2{
-    width: 100%;
-    margin: 0 auto;
-    th{
-        font-size: 12px !important;
-    }
-    td{
-        font-size: 11px;
-        &.mat-cell{
-          padding: 0 !important;
-        }
-        &.mat-footer-cell{
-            font-weight: bold;
-            border-bottom:none;
-            border-top: 1px solid $color-gainsboro;
-            
-          }
-    }
-  }
-  
-  #table3{
-    width: 100%;
-    margin: 0 auto !important;
-    th{
-        font-size: 12px !important;
-    }
-    td{
-        font-size: 11px;
-        &.mat-cell{
-          padding-top: 4px !important;
-          padding-bottom: 4px !important;
-        }
-        &.mat-footer-cell{
-            font-weight: bold;
-            border-bottom:none;
-            border-top: 1px solid $color-gainsboro;
-            
-          }
-    }
-  }
-
-  .mailLevelColumn{
-    width:120px !important;
-    min-width: 120px !important; //FF and IE
-    max-width: 120px !important;
-    overflow: visible; //so that it does not expand td
-    white-space: nowrap; //so that it does not wrap the text
-    &.mailcodeCell{ // so word wrap is applied specifically to the mail code cell (which is bound by a much tighter space)
-        word-break: break-all !important;
-        white-space: normal;
-        padding-right: 4px;
-    }
-  }
-  
-  //Controls child view initial settings
-  .example-element-detail {
-    overflow: hidden;
-    display: flex;
-  }
-  //Removes padding from all nested tables
-  ::ng-deep table > tbody > tr > td.cdk-column-expandedDetail.mat-column-expandedDetail{
-    padding: 0 !important;
-  }
-
-  .mat-row {
-    height: auto;
-  }
-
-  .mat-cell {
-    // padding-top: 4px !important;
-    // padding-bottom: 4px !important;
-    border-bottom:none;
-    text-align: center;
-  }      
-.mat-header-cell{
-    text-align: center;
 }
 
-.mat-footer-cell{
-    text-align: center;
-    padding-top: 6px;
-}
-tr.mat-header-row{
-    height:auto;
-  }
-  th.mat-header-cell{
-    padding:0;
-  }
-  tr.mat-footer-row{
-    height:auto; //row height in mat tables is required to be manually controlled by each cell    
-}
 
-.rowCollapsed{
-    display: none;
-  }
 
-  .rowExpanded{
-    display: inline;
-  }
 
-  .mat-row.childRow {
-    &:hover{
-        background: $color-blue-highlight;
-    }
-  }
-
-  #modalBackground{
+/////////////////// SETTINGS FOR DAY VIEW CONFIRMATION MODALS ///////////////////////
+#modalBackground{
     position: fixed;
     top: 92px;
     z-index: 130;
@@ -445,10 +307,163 @@ tr.mat-header-row{
 
 
 
+///////////////////////// STYLING FOR TABLES ON DAY VIEW ////////////////////////
+#clientParentTable{
+    width: 100%;
+    margin: 0 auto;
+    th{
+        font-size: 12px !important;
+    }
+    td{
+        font-size: 11px;
+        &.mat-cell{
+          padding: 0 !important;
+        }
+        &.mat-footer-cell{
+            font-weight: bold;
+            border-bottom:none;
+            border-top: 1px solid $color-gainsboro;
+            
+          }
+    }
+}
+  
+#mailcodeChildTable{
+    width: 100%;
+    margin: 0 auto !important;
+    th{
+        font-size: 12px !important;
+    }
+    td{
+        font-size: 11px;
+        &.mat-cell{
+          padding-top: 4px !important;
+          padding-bottom: 4px !important;
+        }
+        &.mat-footer-cell{
+            font-weight: bold;
+            border-bottom:none;
+            border-top: 1px solid $color-gainsboro;
+            
+          }
+    }
+}
+
+.mailLevelColumn{
+    width:120px !important;
+    min-width: 120px !important; //FF and IE
+    max-width: 120px !important;
+    overflow: visible; //so that it does not expand td
+    white-space: nowrap; //so that it does not wrap the text
+    &.mailcodeCell{ // so word wrap is applied specifically to the mail code cell (which is bound by a much tighter space)
+        word-break: break-all !important;
+        white-space: normal;
+        padding-right: 4px;
+    }
+}
+
+.expandBtnColumn{
+    width: 55px;
+    min-width: 55px;
+    height: 40px !important;
+    padding: 0 !important;
+    border-bottom:none !important;
+    border-top:none !important;
+}
+
+.controlColumn{
+    width:70px;
+    min-width:70px;
+    border-bottom:none !important;
+    border-top:none !important;  
+}
+
+//Controls edit/cancel/submit
+.controlColumnBtn{
+    width:20px;
+    height:20px;
+    margin-right: 8px;
+    &:hover{
+      color: $color-blue-dark;
+    }
+    i{
+      padding: 0px 0px 10px 0px;
+    }
+}
+
+//Settings for input boxes while editing
+.elementInput{
+    width:75%;
+    display:flex;
+    margin: 0 auto;
+    background-color: $color-gallery;
+    input{
+        text-align:center;
+    }
+    span{
+        padding-bottom:2px;
+    }
+}
+  
+//Controls child view initial settings
+.example-element-detail {
+    overflow: hidden;
+    display: flex;
+}
+
+//Removes padding from all nested tables
+::ng-deep table > tbody > tr > td.cdk-column-expandedDetail.mat-column-expandedDetail{
+    padding: 0 !important;
+}
+
+.mat-row {
+    height: auto;
+}
+
+.mat-cell {
+    border-bottom:none;
+    text-align: center;
+}  
+
+.mat-header-cell{
+    text-align: center;
+}
+
+.mat-footer-cell{
+    text-align: center;
+    padding-top: 6px;
+}
+
+tr.mat-header-row{
+    height:auto;
+}
+
+th.mat-header-cell{
+    padding:0;
+}
+
+tr.mat-footer-row{
+    height:auto; //row height in mat tables is required to be manually controlled by each cell    
+}
+
+.rowCollapsed{
+    display: none;
+}
+
+.rowExpanded{
+    display: inline;
+}
+
+.mat-row.childRow {
+    &:hover{
+        background: $color-blue-highlight;
+    }
+}
 
 
 
-//Sets up font styling resize on year calendar boxes
+
+//////////////////////////////// STYLING FOR RESIZING ///////////////////////////////
 @media only screen and (max-width: $size-xs){
     .quarterBox, .monthBox{
         div{
