--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -34,6 +34,7 @@
           <a class="dropdown-item" (click)="NavigateToNewIncidentals()">Add Incidentals</a>
           <a class="dropdown-item" (click)="NavigateToNewCaging()">Add Caging</a>
           <a class="dropdown-item" (click)="NavigateToCagingCalendar()">Caging Calendar</a>
+          <a class="dropdown-item" (click)="NavigateToUploadPDF()">Upload Letters</a>
           </div>
   
       </li>
