--- a/src/app/Utilities_Pages/Caging/exceptions-main/exceptions-main.component.html
+++ b/src/app/Utilities_Pages/Caging/exceptions-main/exceptions-main.component.html
@@ -1,3 +1,230 @@
-<p>
-  exceptions-main works!
-</p>
+<app-toolbar></app-toolbar>
+<br>
+
+<div class="container" *ngIf="tableLoading == false">
+  <div class="row">
+    <div class="col-11">
+      <mat-card class="mat-elevation-z8">
+        <!-- <div *ngIf="RawCagingData"> -->
+        <!-- ****************************** -->
+        <!-- Exceptions parent Table Start -->
+        <!-- ****************************** -->
+        <table id="InstanceParentTable" mat-table [dataSource]="this.exceptionsAggregate" multiTemplateDataRows>
+          <ng-container matColumnDef="ExpandParent">
+            <th mat-header-cell *matHeaderCellDef="let instance" class="expandBtnColumn expBtnTH"></th>
+            <td mat-cell *matCellDef="let instance" class="expandBtnColumn">
+              <button mat-icon-button (click)="ToggleExpansion(instance)">
+                <i class="material-icons md-elevation-z6" [ngClass]="instance.Expanded?'mi_arrow_drop_down':'mi_arrow_right'"></i>
+              </button>
+            </td>
+            <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>.
+          </ng-container>
+          <ng-container matColumnDef="PsuedoSelection">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let instance"></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="PseudoDate">
+            <th mat-header-cell *matHeaderCellDef class="dateColumn"></th>
+            <td mat-cell *matCellDef="let instance" class="dateColumn"><span></span></td>
+            <td mat-footer-cell *matFooterCellDef class="dateColumn"></td>
+          </ng-container>
+          <ng-container matColumnDef="Instance">
+            <th mat-header-cell *matHeaderCellDef>Mailcode</th>
+            <td mat-cell *matCellDef="let instance"><span>{{instance.MailCode}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="NonDonors">
+            <th mat-header-cell *matHeaderCellDef>Non-Donors</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.NonDonors|number}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CashDonors">
+            <th mat-header-cell *matHeaderCellDef>Cash Donations</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CashDonors|number}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CashGross">
+            <th mat-header-cell *matHeaderCellDef>Cash Gross</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CashAmount|currency:'USD':'symbol':'1.2-2'}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CardDonors">
+            <th mat-header-cell *matHeaderCellDef>Card Donations</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CardDonors|number}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CardGross">
+            <th mat-header-cell *matHeaderCellDef>Card Gross</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CardAmount|currency:'USD':'symbol':'1.2-2'}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CheckDonors">
+            <th mat-header-cell *matHeaderCellDef>Check Donations</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CheckDonors|number}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="CheckGross">
+            <th mat-header-cell *matHeaderCellDef>Check Gross</th>
+            <td mat-cell *matCellDef="let instance"><span [ngClass]="instance.Expanded? 'rowCollapsed': 'rowExpanded'">{{instance.CheckAmount|currency:'USD':'symbol':'1.2-2'}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="ControlParent">
+            <th mat-header-cell *matHeaderCellDef class="controlColumn"></th>
+            <td mat-cell *matCellDef="let instance" class="controlColumn">
+                <button mat-icon-button class="controlColumnBtn instanceEditBtn" *ngIf="instance.showControl == true" (click)="navigateToEditInstance(instance)">
+                  <i class="material-icons instanceEditIcon" title="Edit all instances of mailcode exception">edit</i>
+                </button>
+            </td>
+            <td mat-footer-cell *matFooterCellDef class="controlColumn"></td>
+          </ng-container>
+
+
+
+          <!-- *********************************** -->
+          <!-- Exceptions Child Table Start -->
+          <!-- *********************************** -->
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let instance" [attr.colspan]="MailcodeColumns.length">
+              <div class="example-element-detail" [@detailExpand]="instance.Expanded?'expanded':'collapsed'"
+                [style.height]="instance.Expanded?'unset':'0 !important'">
+                <div style="width:100%">
+                  <br>
+                  <table id="mailcodeChildTable" mat-table [dataSource]="instance.ExceptionList">
+                    <ng-container matColumnDef="ExpandChild">
+            <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
+            <td mat-cell *matCellDef="let exceptionElement" class="expandBtnColumn"></td>
+            <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"></td>
+          </ng-container>
+          <ng-container matColumnDef="SelectionBox">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <!-- <mat-checkbox (click)="checkSelected(exceptionElement, $event)" (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
+          class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox> -->
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="Date">
+            <th mat-header-cell *matHeaderCellDef class="dateColumn">Cage Date</th>
+            <td mat-cell *matCellDef="let exceptionElement" class="dateColumn"><span>{{exceptionElement.DateCaged|date:'shortDate'}}</span></td>
+            <td mat-footer-cell *matFooterCellDef class="dateColumn">Totals</td>
+          </ng-container>
+          <ng-container matColumnDef="Mailcode">
+            <th mat-header-cell *matHeaderCellDef>Mailcode</th>
+            <td mat-cell *matCellDef="let exceptionElement"><span>{{exceptionElement.MailCode}}</span></td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="NonDonors">
+            <th mat-header-cell *matHeaderCellDef>Non-Donors</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.NonDonors|number}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.NonDonors|number}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CashDonors">
+            <th mat-header-cell *matHeaderCellDef>Cash Donations</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CashDonors|number}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CashDonors|number}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CashGross">
+            <th mat-header-cell *matHeaderCellDef>Cash Gross</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CashAmount|currency:'USD':'symbol':'1.2-2'}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CashAmount|currency:'USD':'symbol':'1.2-2'}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CardDonors">
+            <th mat-header-cell *matHeaderCellDef>Card Donations</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CardDonors|number}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CardDonors|number}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CardGross">
+            <th mat-header-cell *matHeaderCellDef>Card Gross</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CardAmount|currency:'USD':'symbol':'1.2-2'}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CardAmount|currency:'USD':'symbol':'1.2-2'}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CheckDonors">
+            <th mat-header-cell *matHeaderCellDef>Check Donations</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CheckDonors|number}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CheckDonors|number}}</td>
+          </ng-container>
+          <ng-container matColumnDef="CheckGross">
+            <th mat-header-cell *matHeaderCellDef>Check Gross</th>
+            <td mat-cell *matCellDef="let exceptionElement">
+              <span>{{exceptionElement.CheckAmount|currency:'USD':'symbol':'1.2-2'}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{instance.CheckAmount|currency:'USD':'symbol':'1.2-2'}}</td>
+          </ng-container>
+          <ng-container matColumnDef="ControlChild">
+            <th mat-header-cell *matHeaderCellDef class="controlColumn"></th>
+            <td mat-cell *matCellDef="let exceptionElement" class="controlColumn">
+              <button mat-icon-button class="controlColumnBtn" *ngIf="exceptionElement.showControl == true" (click)="navigateToEditMailcode(exceptionElement)">
+                <i class="material-icons">edit</i>
+              </button>
+            </td>
+            <td mat-footer-cell *matFooterCellDef class="controlColumn"></td>
+          </ng-container>
+
+
+          <tr mat-header-row *matHeaderRowDef="MailcodeColumns"></tr>
+          <tr mat-row class="example-element-row childRow" *matRowDef="let row; columns: MailcodeColumns;" (mouseenter)="hoverRowChild(row)"
+            (mouseleave)="hoverRowChild(row)"></tr>
+          <tr mat-footer-row *matFooterRowDef="MailcodeColumns"></tr>
+        </table>
+        <br>
+        <br>
+    </div>
+  </div>
+  </td>
+  </ng-container>
+
+
+
+  <tr mat-header-row *matHeaderRowDef="InstanceColumns">
+  </tr>
+  <tr mat-row class="example-element-row" *matRowDef="let row; columns: InstanceColumns;" (mouseenter)="hoverParentOn(row)"
+    (mouseleave)="hoverParentOff(row)"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  <tr mat-footer-row *matFooterRowDef="InstanceColumns"></tr>
+  </table>
+  <!-- </div> -->
+  </mat-card>
+</div>
+
+
+<div class="col-1">
+  <div class="stickyButtons">
+    <div class="row">
+      <mat-card class="mat-elevation-z8">
+        <!-- <div>
+          <button mat-icon-button (click)="navigateToNew()" title="Add Caging Entry"><i class="material-icons">add_circle</i></button>
+        </div> -->
+        <div>
+          <button mat-icon-button (click)="expandAllInstance()" [title]="allInstancesExpanded? 'Collapse all Clients':'Expand all Clients'">
+            <i class="material-icons" *ngIf="allInstancesExpanded == false">unfold_more</i>
+            <i class="material-icons" *ngIf="allInstancesExpanded == true">unfold_less</i>
+          </button>
+        </div>
+        <!-- <div>
+          <button mat-icon-button (click)="toggleSelection()" [style.color]="selectionMode? '#1279C0' : 'black'"
+            [title]="selectionMode? 'Toggle Off Deletion':'Toggle for Deletion'">
+            <i class="material-icons">list</i>
+          </button>
+        </div> -->
+        <!-- <div>
+          <button mat-icon-button (click)="preDelete($event)" *ngIf="selectionMode"><i class="material-icons">delete</i></button>
+        </div> -->
+      </mat-card>
+    </div>
+  </div>
+</div>
+</div>
+</div>
