Updated PDF page

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -35,7 +35,7 @@
           <a class="dropdown-item" (click)="NavigateToNewCaging()">Add Caging</a>
           <a class="dropdown-item" (click)="NavigateToCagingCalendar()">Caging Calendar</a>
           <a class="dropdown-item" (click)="NavigateToExceptions()">Caging Exceptions</a>
-          <a class="dropdown-item" (click)="NavigateToUploadPDF()">Upload Letters</a>
+          <a class="dropdown-item" (click)="NavigateToPDFUpload()">Manage Package PDFs</a>
 
           </div>
   
