--- a/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
+++ b/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
@@ -69,12 +69,16 @@
         <ng-container matColumnDef="Link">
           <th mat-header-cell *matHeaderCellDef> PDF Link </th>
           <td mat-cell *matCellDef="let element">
-            <a *ngIf="element.HasPDF == true" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{element.PhaseID}}" target="_blank">PDF</a>
+            <a *ngIf="element.HasPDF == true" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{element.PhaseID}}" target="_blank"><i class="material-icons">launch</i></a>
             <span *ngIf="element.HasPDF == false">None</span>
           </td>
         </ng-container>
         <ng-container matColumnDef="ButtonControl">
-          <th mat-header-cell *matHeaderCellDef class="ButtonControlCell"> </th>
+          <th mat-header-cell *matHeaderCellDef class="ButtonControlCell">
+            <button mat-mini-fab><i class="material-icons">filter_list</i>
+              
+            </button>
+          </th>
           <td mat-cell *matCellDef="let element" class="ButtonControlCell">
             <!-- <button mat-icon-button *ngIf="element.showEditButton" (click)="navigateToEdit(element)"><i class="material-icons">edit</i></button> -->
           </td>
