--- a/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
+++ b/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
@@ -75,7 +75,7 @@
         </ng-container>
         <ng-container matColumnDef="ButtonControl">
           <th mat-header-cell *matHeaderCellDef class="ButtonControlCell">
-            <button mat-mini-fab><i class="material-icons">filter_list</i>
+            <button mat-icon-button><i class="material-icons">filter_list</i>
               
             </button>
           </th>
