--- a/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
+++ b/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
@@ -4,6 +4,17 @@
 <div class="container">
   <mat-card class="mat-elevation-z8">
 
+    <div style="width:96%; margin: 0 auto">
+    <br>
+    <div class="row" *ngIf="loading == false">
+      <div class="col-12">
+        <h4 *ngIf="tableState == 0">PDF Reporting on 0 packages</h4>
+        <h4 *ngIf="tableState == 1">PDF Reporting on {{pdfCount}} packages</h4>
+        <h4 *ngIf="tableState == 2">PDF Reporting on {{noneCount}} packages</h4>
+        <h4 *ngIf="tableState == 3">PDF Reporting on {{bothCount}} packages</h4>
+        <br>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-6">
         <mat-form-field appearance="outline" class="selectionElement">
@@ -41,17 +52,17 @@
       </div>
     </div>
 
+    <div class="row" *ngIf="loading == false">
+      <div class="col-md-4">
+        <mat-form-field class="selectionElement">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+        </mat-form-field>
+      </div>
+    </div>
 
     <div style="width:100%; height: 4px;">
       <mat-progress-bar color="accent" mode="indeterminate" *ngIf="loading == true"></mat-progress-bar>
     </div>
-    <div class="row" *ngIf="loading == false">
-      <div class="col-12">
-        <h4>PDF Reporting on {{packageCount}} packages</h4>
-        <br>
-      </div>
-    </div>
-
 
     <div class="row" *ngIf="loading == false">
       <div class="col-12">
@@ -95,12 +106,10 @@
           </ng-container>
           <ng-container matColumnDef="ButtonControl">
             <th mat-header-cell *matHeaderCellDef class="ButtonContcontrolColumnrolCell"></th>
-            <td mat-cell *matCellDef="let element" class="controlColumn">
-              <button mat-icon-button *ngIf="element.ShowControl" (click)="fileInput.click()" id="uploadBtn" [title]="element.HasPDF? 'Replace PDF':'Upload PDF'"
+            <td mat-cell *matCellDef="let element" class="controlColumn"> 
+              <button mat-icon-button *ngIf="element.ShowControl" (click)="preFileChange(element)" id="uploadBtn" [title]="element.HasPDF? 'Replace PDF':'Upload PDF'"
                 class="controlColumnBtn"><i class="material-icons">note_add</i></button>
-              <button mat-icon-button *ngIf="element.ShowControl" (click)="removePDF()" title="Remove PDF" class="controlColumnBtn"><i
-                  class="material-icons">delete</i></button>
-              <input #fileInput type="file" (change)="onFileChange($event)" multiple="false" style="display:none;" />
+              <input #fileInput type="file"  multiple="false" accept="application/pdf" (change)="onFileChange($event)" style="display:none;" />
             </td>
           </ng-container>
 
@@ -111,6 +120,72 @@
       </div>
 
     </div>
+  </div>
   </mat-card>
 
 </div>
+
+
+
+
+
+<div id="modalBackground" *ngIf="showSubmittedModal">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <mat-card class="mat-elevation-z8 modalCard">
+            <div>
+              <div class="row">
+                <div class="col-12 cancelDiv">
+                  <button mat-icon-button id="modalCancelBtn" (click)="modalCancel()"><i class="material-icons">cancel</i></button>
+  
+                </div>
+                <div class="col-12 bannerDiv">
+                  <i class="material-icons bannerIcon">check_circle_outline</i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 updatedDiv">
+                  <span class="updatedMsg">PDF Linked!</span>
+                </div>
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div id="modalBackground" *ngIf="showUpdateConfirmModal">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            <mat-card class="mat-elevation-z8 confirmModalCard">
+              <div>
+              <div class="row">
+                <div class="col-6 offset-3">
+                  <i class="material-icons">error_outline</i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-10 offset-1">
+                  <span id="confirmMessage1">Are you sure?</span>
+                </div>
+                <div class="col-10 offset-1">
+                  <p>Do you really want to overwrite this package's PDF?</p><p style="font-weight: bold">This process cannot be undone.</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 btnContainer">
+                  <button mat-raised-button class="mat-elevation-z2" id="cancelBtn" (click)="modalCancel()">Cancel</button>
+                  <button mat-raised-button class="mat-elevation-z4" id="confirmBtn" (click)="fileOverwriteConfirmed()">Add New</button>
+                </div>
+              </div>
+            </div>
+            </mat-card>
+          </div>
+        </div>
+      </div>
+    </div>
